--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <meta name="description" content="A foodie's dream">
-  <title>FOOD</title>
+  <title>Food</title>
   <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
-  <h1>Food</h1>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="food.html">FOOD</a></li>
-      <li><a href="restuarants.html">Restuarants</a></li>
-      
-    </ul>
-  </nav>
-<section id="leftColumn">
-  <h2>FOODIES COVE</h2>
-  <h3>Rules:</h3>
-  <ul>
-    <li>Be a proud food lover</li>
-    <li>Live laugh love food</li>
-    <li>All you can think about 24/7 is food</li>
-  </ul>
+  <header>
+    <h1>Food</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="food.html">Food</a></li>
+        <li><a href="restaurants.html">Restaurants</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="leftColumn">
+      <h2>Foodies' Cove</h2>
+      <h3>Rules:</h3>
+      <ul>
+        <li>Be a proud food lover</li>
+        <li>Live, laugh, love food</li>
+        <li>All you can think about 24/7 is food</li>
+      </ul>
     </section>
     <section id="rightColumn">
-  <h2>Priorities</h2>
-  <ul>
-    <li>Food</li>
-    <li>FOOD</li>
-    <li>FOOOOOOOD</li>
-  </ul>
+      <h2>Priorities</h2>
+      <ul>
+        <li>Food</li>
+        <li>Food</li>
+        <li>Food</li>
+      </ul>
     </section>
+  </main>
+
+  <footer>
+    </footer>
 </body>
 </html>
