--- a/index.html
+++ b/index.html
@@ -37,6 +37,83 @@
         <li>Food</li>
       </ul>
     </section>
+    <section id="indianFood">
+      <h2>Indian Food</h2>
+      <ul>
+        <li>
+          <h3>Gobi Manchurian</h3>
+          <img src="gobi-manchurian.jpg" alt="Gobi Manchurian">
+          <p>A popular vegetarian dish made with crispy cauliflower florets coated in a spicy, tangy sauce.</p>
+          <p><strong>Restaurants:</strong>
+            <ul>
+              <li>India Palace</li>
+              <li>Curry Leaf</li>
+              <li>Punjab Grill</li>
+            </ul>
+          </p>
+        </li>
+        <li>
+          <h3>Paneer Tikka Masala</h3>
+          <img src="paneer-tikka-masala.jpg" alt="Paneer Tikka Masala">
+          <p>A creamy tomato-based curry with chunks of cottage cheese marinated in yogurt and spices.</p>
+          <p><strong>Restaurants:</strong>
+            <ul>
+              <li>India Palace</li>
+              <li>Curry Leaf</li>
+              <li>Punjab Grill</li>
+            </ul>
+          </p>
+        </li>
+        <li>
+          <h3>Kothu Paratha</h3>
+          <img src="kothu-paratha.jpg" alt="Kothu Paratha">
+          <p>A street food dish made with shredded paratha, vegetables, and eggs, stir-fried with spices.</p>
+          <p><strong>Restaurants:</strong>
+            <ul>
+              <li>Madurai Cafe</li>
+              <li>Saravana Bhavan</li>
+              <li>Sangeetha Restaurant</li>
+            </ul>
+          </p>
+        </li>
+        <li>
+          <h3>Biryani</h3>
+          <img src="biryani.jpg" alt="Biryani">
+          <p>A flavorful rice dish cooked with meat (chicken, lamb, or goat), vegetables, and spices.</p>
+          <p><strong>Restaurants:</strong>
+            <ul>
+              <li>India Palace</li>
+              <li>Curry Leaf</li>
+              <li>Punjab Grill</li>
+            </ul>
+          </p>
+        </li>
+        <li>
+          <h3>Garlic Naan</h3>
+          <img src="garlic-naan.jpg" alt="Garlic Naan">
+          <p>A leavened flatbread cooked in a tandoor oven and topped with garlic and butter.</p>
+          <p><strong>Restaurants:</strong>
+            <ul>
+              <li>India Palace</li>
+              <li>Curry Leaf</li>
+              <li>Punjab Grill</li>
+            </ul>
+          </p>
+        </li>
+        <li>
+          <h3>Chicken 65</h3>
+          <img src="chicken-65.jpg" alt="Chicken 65">
+          <p>A spicy, tangy chicken dish made with marinated chicken deep-fried and tossed in a chili-based sauce.</p>
+          <p><strong>Restaurants:</strong>
+            <ul>
+              <li>India Palace</li>
+              <li>Curry Leaf</li>
+              <li>Punjab Grill</li>
+            </ul>
+          </p>
+        </li>
+      </ul>
+    </section>
   </main>
 
   <footer>
