--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <ul>
         <li>
           <h3>Gobi Manchurian</h3>
-          <img src="gobi-manchurian.jpg" alt="Gobi Manchurian">
+          <img src="https://www.google.com/imgres?q=gobi%20manchurian&imgurl=https%3A%2F%2Fpalatesdesire.com%2Fwp-content%2Fuploads%2F2022%2F09%2Fdry-gobi-manchurian-recipe%40palates-desire.jpg&imgrefurl=https%3A%2F%2Fpalatesdesire.com%2Fgobi-manchurian-dry-cauliflower%2F&docid=KYWMCUux4O4P0M&tbnid=T8HyZxKC5ndIUM&vet=12ahUKEwihvLPXquKIAxXsEEQIHYnuONEQM3oFCIUBEAA..i&w=1200&h=1200&hcb=2&ved=2ahUKEwihvLPXquKIAxXsEEQIHYnuONEQM3oFCIUBEAA" alt="Gobi Manchurian">
           <p>A popular vegetarian dish made with crispy cauliflower florets coated in a spicy, tangy sauce.</p>
           <p><strong>Restaurants:</strong>
             <ul>
