--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </li>
         <li>
           <h3>Paneer Tikka Masala</h3>
-          <img src="paneer-tikka-masala.jpg" alt="Paneer Tikka Masala">
+          <img src="Paneer Tikka Masala.jfif" alt="Paneer Tikka Masala">
           <p>A creamy tomato-based curry with chunks of cottage cheese marinated in yogurt and spices.</p>
           <p><strong>Restaurants:</strong>
             <ul>
@@ -66,7 +66,7 @@
         </li>
         <li>
           <h3>Kothu Paratha</h3>
-          <img src="kothu-paratha.jpg" alt="Kothu Paratha">
+          <img src="Kothu Paratha.jfif" alt="Kothu Paratha">
           <p>A street food dish made with shredded paratha, vegetables, and eggs, stir-fried with spices.</p>
           <p><strong>Restaurants:</strong>
             <ul>
@@ -78,7 +78,7 @@
         </li>
         <li>
           <h3>Biryani</h3>
-          <img src="biryani.jpg" alt="Biryani">
+          <img src="Biriyani.jfif" alt="Biryani">
           <p>A flavorful rice dish cooked with meat (chicken, lamb, or goat), vegetables, and spices.</p>
           <p><strong>Restaurants:</strong>
             <ul>
@@ -90,7 +90,7 @@
         </li>
         <li>
           <h3>Garlic Naan</h3>
-          <img src="garlic-naan.jpg" alt="Garlic Naan">
+          <img src="Garlic Naan.jfif" alt="Garlic Naan">
           <p>A leavened flatbread cooked in a tandoor oven and topped with garlic and butter.</p>
           <p><strong>Restaurants:</strong>
             <ul>
@@ -102,7 +102,7 @@
         </li>
         <li>
           <h3>Chicken 65</h3>
-          <img src="chicken-65.jpg" alt="Chicken 65">
+          <img src="Chicken 65.jfif" alt="Chicken 65">
           <p>A spicy, tangy chicken dish made with marinated chicken deep-fried and tossed in a chili-based sauce.</p>
           <p><strong>Restaurants:</strong>
             <ul>
