--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="food.html">Food</a></li>
-        <li><a href="restaurants.html">Restaurants</a></li>
       </ul>
     </nav>
   </header>
@@ -46,9 +43,9 @@
           <p>A popular vegetarian dish made with crispy cauliflower florets coated in a spicy, tangy sauce.</p>
           <p><strong>Restaurants:</strong>
             <ul>
-              <li>India Palace</li>
-              <li>Curry Leaf</li>
-              <li>Punjab Grill</li>
+             <li><a href="https://www.amaravathiexpress.com/">Amaravathi Express</a></li>
+              <li><a href="https://bhookhe.com/">Bhookhe</a></li>
+              <li><a href="https://podidosa.com/">Podi dosa</a></li>
             </ul>
           </p>
         </li>
@@ -58,9 +55,9 @@
           <p>A creamy tomato-based curry with chunks of cottage cheese marinated in yogurt and spices.</p>
           <p><strong>Restaurants:</strong>
             <ul>
-              <li>India Palace</li>
-              <li>Curry Leaf</li>
-              <li>Punjab Grill</li>
+              <li><a href="https://curryloungeca.com/">Curry Lounge - Indian Restaurant in Artesia</a></li>
+              <li><a href="https://www.thepunjabrestaurant.com/">The Punjab Restaurant</a></li>
+              <li><a href="https://punjabitandoorca.com/">Punjabi Tandoor</a></li>
             </ul>
           </p>
         </li>
@@ -70,9 +67,9 @@
           <p>A street food dish made with shredded paratha, vegetables, and eggs, stir-fried with spices.</p>
           <p><strong>Restaurants:</strong>
             <ul>
-              <li>Madurai Cafe</li>
-              <li>Saravana Bhavan</li>
-              <li>Sangeetha Restaurant</li>
+              <li><a href="https://www.anjapparla.com/">Anjappar Chettinad Indian Restaurant</a></li>
+              <li><a href="https://www.amaravathiexpress.com/">Amaravathi Express</a></li>
+              <li><a href="https://podidosa.com/">Podi dosa</a></li>
             </ul>
           </p>
         </li>
@@ -82,9 +79,9 @@
           <p>A flavorful rice dish cooked with meat (chicken, lamb, or goat), vegetables, and spices.</p>
           <p><strong>Restaurants:</strong>
             <ul>
-              <li>India Palace</li>
-              <li>Curry Leaf</li>
-              <li>Punjab Grill</li>
+              <li><a href="https://laparadisebiryani.com/">Paradise Biryani Pointe</a></li>
+               <li><a href="https://www.anjapparla.com/">Anjappar Chettinad Indian Restaurant</a></li>
+              <li><a href="https://pistahousela.com/">Pista house</a></li>
             </ul>
           </p>
         </li>
@@ -94,9 +91,9 @@
           <p>A leavened flatbread cooked in a tandoor oven and topped with garlic and butter.</p>
           <p><strong>Restaurants:</strong>
             <ul>
-              <li>India Palace</li>
-              <li>Curry Leaf</li>
-              <li>Punjab Grill</li>
+              <li><a href="https://www.smorefood.com/order-online/paratha-grill-artesia-90701-f4sebg3n?utm_source=gmb&utm_medium=website">Paratha Grill</a></li>
+              <li><a href="https://www.thepunjabrestaurant.com/">The Punjab Restaurant</a></li>
+              <li><a href="https://punjabitandoorca.com/">Punjabi Tandoor</a></li>
             </ul>
           </p>
         </li>
@@ -106,9 +103,9 @@
           <p>A spicy, tangy chicken dish made with marinated chicken deep-fried and tossed in a chili-based sauce.</p>
           <p><strong>Restaurants:</strong>
             <ul>
-              <li>India Palace</li>
-              <li>Curry Leaf</li>
-              <li>Punjab Grill</li>
+              <li><a href="https://www.amaravathiexpress.com/">Amaravathi Express</a></li>
+              <li><a href="https://podidosa.com/">Podi dosa</a></li>
+              <li><a href="https://punjabitandoorca.com/">Punjabi Tandoor</a></li>
             </ul>
           </p>
         </li>
